# foodwaste

./: .gitignore  README.md  launch_mlflow.bat  pyproject.toml
configs/: train.yaml
examples/: train_with_lightning.py
notebooks/: FoodWaste.ipynb
src/foodwaste/: __init__.py  __main__.py  cli.py  config.py  dataset.py  models.py  train.py  transforms.py  utils.py
tests/: test_lightning_implementation.py
