[project]
name = "foodwaste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "albumentations>=2.0.8",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fiftyone==1.2.0",
    "lightning>=2.5.3",
    "litserve>=0.2.15",
    "notebook>=7.4.5",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.7",
    "timm>=1.0.19",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.55.2",
]
